--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 #sidebar img{
     width: 3em;
 }
+.col-sm {
+
+}
+.col-lg {
+
+}
 /* Small 510 */
 @media screen and (min-width: 510px) and (max-width: 902px) {
     .dotBig {
