--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,6 @@ body {
     height: 105px;
     width: 105px;
     display: flex;
-    /*flex: left;*/
-    /*flex-wrap: nowrap;*/
-    /*flex-basis: auto;*/
-    /*flex-direction: row;*/
 }
 
 /*style the navigation menu*/
@@ -120,4 +116,8 @@ body {
     align-items: center;
 }
 
+.aside-img {
+    height: 90px;
+    width: 90px;
+}
 
