corrected dots in css

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ body {
 #logo-img {
     height: 105px;
     width: 105px;
-    display: flex;
 }
 
 /*style the navigation menu*/
@@ -55,27 +54,28 @@ body {
 }
 
 .nav-item {
-    background: #E6563B;
+    /*background: #E6563B;*/
     color: #b7b6b3;
     display: flex;
     flex: left;
 }
 
 h1, h2, h3 {
-    font: font-family: 'Anton', sans-serif;
+    font-family: 'Anton', sans-serif;
 }
 
 .circle-with-text {
-    border: white solid 5px;
+    /*border: white solid 5px;*/
+    /*color: white;*/
+    display: flex;
     color: white;
+    border: 3px solid white;
+    width: 90px;
+    height: 90px;
 }
 
-.featuredProject {
-    font: font-family: 'Abel', sans-serif;
-}
-
-.circle-with-letter {
-
+nav {
+    font-family: 'Abel', sans-serif;
 }
 
 .redcolor {
@@ -101,19 +101,17 @@ h1, h2, h3 {
     height: 25px;
     width: 25px;
     border-radius: 50%;
-    display: inline-block;
-    text-align: center;
+    display: inline-flex;
+    font-size: .75em;
 }
 .dotBig {
 
-    height: 85px;
-    width: 85px;
+    height: 90px;
+    width: 90px;
     border-radius: 50%;
-    display: inline-flex;
-    text-align: center;
-    margin: auto;
-    justify-content: center;
-    align-items: center;
+    border: 3px solid white;
+    display: flex;
+    color: white;
 }
 
 .aside-img {
